--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -676,6 +676,10 @@ input, textarea, select, .uneditable-input {
   margin-bottom:5px;
 }
 
+.case_block {
+
+}
+
 .target_name {
   padding-bottom:20px;
   padding-top:40px;
@@ -686,42 +690,21 @@ input, textarea, select, .uneditable-input {
 }
 
 
-/************* roulette **************/
+/******** Roulette *********/
 
-.r_block {
-
-  width: 250px;
-  height: 250px;
-  margin: 10px;
-  border: 1px solid gray;
-  &:hover {
-    background-color: $grayLighter;
-  }
-  -moz-box-shadow: 2px 2px 7px #888;
-  -webkit-box-shadow: 2px 2px 7px #888;
-  box-shadow: 2px 2px 7px #888;
-  -moz-border-radius:15px;
-  border-radius: 15px;
-
-}
-
-.r_container {
+#case_form_mini {
+  position:absolute;
+  left:100px;
+  top:100px;
   height:500px;
+  width:300px;
+  overflow-y:auto;
 }
 
-.r_grid {
-  list-style-type: none;
-}
 
-.r_user {
-  border: 0px solid black;
-  width: 100%;
-  list-style-type: none;
-  position:relative;
-  margin:0px;
-  top:30px;
-  margin:10px;
-}
+
+
+
 
 /* Paginate Theme */
 
