--- a/app/views/roulette/index.html.erb
+++ b/app/views/roulette/index.html.erb
@@ -51,6 +51,19 @@
     </head>
 
 
+
+
+    <div id="case_form_mini" style="">
+
+        <%= render 'cases/new' %>
+
+    </div>
+
+
+
+
+
+
     <div background="<%= asset_path 'art/banner.png' %>" style="background-repeat: no-repeat; background-position: top center;padding-top:99px;" style="width:970px;height:635px;">
 
         <!-- SWFObject's dynamic embed method replaces this alternative HTML content with Flash content when enough 
